상영 스케줄 시작 전인지 확인